fix footer for post and search. align form to center. fix main page button in post.

--- a/style.css
+++ b/style.css
@@ -75,26 +75,54 @@ label {
 }
 
 input {
-  line-height: 24px;
+  line-height: 30px;
   border: 1px solid rgb(187, 187, 187);
   margin-bottom: 5px;
   border-radius: 2px;
+  padding: 2px 12px;
 }
 
 /* event post grid */
 
+.event-posting {
+  max-width: 850px;
+  margin: auto;
+}
+
 .post-event {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  /* grid-template-columns: repeat(4, 1fr); */
   grid-template-rows: repeat(7, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 14px;
   max-width: 600px;
-  margin-left: 100px;
-  margin-top: 60px;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-top: 40px;
+}
+
+.post-event-header {
+  font-size: 16px;
+  text-align: center;
+  margin-top: 15px;
+}
+
+.main-page-btn {
+  position: fixed;
+  top: 120px;
+  right: 20px;
+  background-color: #fff;
+  padding: 16px;
+  border-radius: 16px;
+}
+
+.main-page-btn-link {
+  font-size: 16px;
+  font-weight: 700;
 }
 
 footer {
+  font-size: 15px;
   margin-top: auto;
   position: fixed;
   left: 0;
